# resume-chatbot

./: .gitignore  README.md  deploy.sh  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .env.example  CHROMADB_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.debug  Dockerfile.prod  ENHANCED_PROCESSOR_README.md  demo_enhanced_processor.py  pyproject.toml  requirements.txt  run_tests.py  test_basic_functionality.py
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  chat.py  documents.py  search.py
backend/app/core/: config.py
backend/app/models/: chat.py  document.py
backend/app/services/: analytics_service.py  auth_service.py  cache_service.py  chat_service.py  citation_service.py  conversation_manager.py  document_processor.py  exceptions.py  llm_service.py  search_service.py  streaming_service.py  vector_store.py
backend/tests/: conftest.py  test_document_processor.py  test_edge_cases.py  test_integration.py  test_rag_integration.py  test_vector_store.py
documents/: .gitkeep
frontend/: .eslintrc.json  Dockerfile  Dockerfile.prod  ENHANCED_FRONTEND_SUMMARY.md  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: enhanced-page.tsx  globals.css  layout.tsx  page.tsx  vector-page.tsx
frontend/src/components/chat/: chat-input.tsx  (+4 more)
frontend/src/hooks/: useDocumentProcessing.ts  useVectorDatabase.ts
frontend/src/types/: chat.ts  document.ts  upload.ts  vector.ts
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
(+23 files in other folders)
